--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,7 +31,7 @@ scrape_configs:
   - job_name: app
     scrape_interval: 5s
     static_configs:
-      - targets: ['host.docker.internal:8000']
+      - targets: ['localhost:9100']
 
   - job_name: 'prometheus'
 
