--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,42 +31,27 @@ scrape_configs:
   - job_name: app
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9100']
+      - targets: ['host.docker.internal:8000']
 
   - job_name: 'prometheus'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
     static_configs:
          - targets: ['localhost:9090']
 
 
   - job_name: 'cadvisor'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
-    dns_sd_configs:
-    - names:
-      - 'tasks.cadvisor'
-      type: 'A'
-      port: 8080
-
-#     static_configs:
-#          - targets: ['cadvisor:8080']
+    static_configs:
+          - targets: ['localhost:8080']
 
   - job_name: 'node-exporter'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
-    dns_sd_configs:
-    - names:
-      - 'tasks.node-exporter'
-      type: 'A'
-      port: 9100
-
+    static_configs:
+          - targets: ['localhost:9100']
+    
 #  - job_name: 'pushgateway'
 #    scrape_interval: 10s
 #    dns_sd_configs:
@@ -75,5 +60,4 @@ scrape_configs:
 #      type: 'A'
 #      port: 9091
 
-#     static_configs:
-#          - targets: ['node-exporter:9100']
+    
