--- a/alertmanager/config.yml
+++ b/alertmanager/config.yml
@@ -1,10 +1,31 @@
+global:
+
+ resolve_timeout: 1m
+
+
+
 route:
-  receiver: 'slack'
+
+ receiver: 'email-notifications'
+
+
 
 receivers:
-  - name: 'slack'
-#       slack_configs:
-#           - send_resolved: true
-#             username: '<username>'
-#             channel: '#<channel-name>'
-#             api_url: '<incomming-webhook-url>'
+
+- name: 'email-notifications'
+
+  email_configs:
+
+  - to: 'devops.dxc102@gmail.com'
+
+    from: 'devops.dxc102@gmail.com'
+
+    smarthost: smtp.gmail.com:587
+
+    auth_username: 'devops.dxc102@gmail.com'
+
+    auth_identity: 'devops.dxc102@gmail.com'
+
+    auth_password: 'ilbonhdkqyhqgsgn'
+
+#    send_resolved: true
